@@ -1,3 +1,7 @@
+  09 May 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  stlink-9999.ebuild:
+  dev-embedded/stlink: add gui & fix udev rules
+
 *stlink-1.2.0 (09 May 2016)
 
   09 May 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
